// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioQuestion /> should render with default value 1`] = `
.c3 {
  padding: 0;
  font-size: 1.15rem;
  margin-right: 2em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  font-size: 1.25rem;
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
}

.c0 {
  border: none;
  padding-left: 0;
  margin-left: 0;
}

.c2 {
  margin-bottom: 0.625rem;
}

<div>
  <fieldset
    class="c0"
  >
    <legend
      class="c1"
    >
      Une question ?
    </legend>
    <div
      class="c2"
    >
      <label
        class="c3"
      >
        <input
          name="foo"
          type="radio"
          value="foo"
        />
        <span>
          label foo
        </span>
      </label>
    </div>
    <div
      class="c2"
    >
      <label
        class="c3"
      >
        <input
          name="foo"
          type="radio"
          value="baz"
        />
        <span>
          label baz
        </span>
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<RadioQuestion /> should render with selectedValue value 1`] = `
.c3 {
  padding: 0;
  font-size: 1.15rem;
  margin-right: 2em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  font-size: 1.25rem;
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
}

.c0 {
  border: none;
  padding-left: 0;
  margin-left: 0;
}

.c2 {
  margin-bottom: 0.625rem;
}

<div>
  <fieldset
    class="c0"
  >
    <legend
      class="c1"
    >
      Une question ?
    </legend>
    <div
      class="c2"
    >
      <label
        class="c3"
      >
        <input
          checked=""
          name="foo"
          type="radio"
          value="foo"
        />
        <span>
          label foo
        </span>
      </label>
    </div>
    <div
      class="c2"
    >
      <label
        class="c3"
      >
        <input
          name="foo"
          type="radio"
          value="baz"
        />
        <span>
          label baz
        </span>
      </label>
    </div>
  </fieldset>
</div>
`;
